# word_quiz

./: .env  .gitignore  4leverage_mid.numbers  README.md  TOEIC_full.csv  TOEIC_words.csv  TOEIC_words01.csv  app.py  app.py.bak  gemini_test.py  gen.py  pyproject.toml  requirements.txt  show_db.py
instance/: word_quiz.db
migrations/: env.py
migrations/versions/: 0a643c65dc71_render.py  0d978b1c5639_add_new_fields_to_deck_model.py  45438fdd6efa_pulled.py  4b908b6ba267_initial_migration.py  503c8e7f6e53_init.py  63978af87ca2_sentence_added.py  750e16fa31f4_hi.py  91ca755dbd03_add_wrongword.py  9b6d26025190_init.py  a0e40e4c2394_recreate.py  a6e4e136d78a_add_study_log.py  a86945a2b724_okok.py  c6e2567a92ff_init.py  ca55828bbac0_init.py  cd6c87272e55_test.py  d43123cd04f5_adapt.py  fe4165712523_render.py
static/: API.css  addwords.js  auto-translate.js  calendar.js  deck.css  deck_detail.css  hamburger.css  hamburger.js  saved_sentences.css  script.js  script_combined.js  start_style.css  study_logs.css  style.css
static/icons/: site.webmanifest
templates/: API.html  deck_add.html  deck_detail.html  decks.html  index.html  login.html  my_words.html  register.html  saved_sentences.html  start.html  study_logs.html  wrong_words.html
word_quiz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
